--- a/Exemple/app/build.gradle
+++ b/Exemple/app/build.gradle
@@ -35,7 +35,7 @@ dependencies {
     implementation 'com.google.firebase:firebase-analytics'
     implementation 'com.jakewharton:butterknife:10.2.3'
     annotationProcessor 'com.jakewharton:butterknife-compiler:10.2.3'
-    implementation 'com.dialoginsight:dianalytics2:0.3.0@aar'
+    implementation 'com.dialoginsight:dianalytics2:0.3.1'
     coreLibraryDesugaring 'com.android.tools:desugar_jdk_libs:1.1.5'
     implementation 'com.android.support:multidex:1.0.3'
     api 'com.google.firebase:firebase-core:19.0.0'
